fiddle around with URL construction. finally got it (?). help browser seems ok now...